--- a/sass/admin/wp-editor-styles.scss
+++ b/sass/admin/wp-editor-styles.scss
@@ -37,7 +37,7 @@ html {
 		border: none;
 	}
 }
-.ast-highlight-wpblock-onhover .block-editor-block-list__layout .block-editor-block-list__block {
+.ast-highlight-wpblock-onhover .block-editor-block-list__layout .block-editor-block-list__block:not(.editor-post-title__input) {
 	transition: all 0.2s;
 	&.is-highlighted,
 	&:hover {
